add scripts settings

--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "hubot-google-images": "^0.1.4",
     "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
+    "hubot-karma": "^0.2.2",
     "hubot-maps": "0.0.2",
+    "hubot-mongodb-brain": "^0.1.0",
     "hubot-pugme": "^0.1.0",
     "hubot-rules": "^0.1.0",
+    "hubot-schedule": "~0.2.0",
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
-    "hubot-youtube": "^0.1.2",
-    "hubot-schedule": "~0.2.0"
+    "hubot-youtube": "^0.1.2"
   },
   "engines": {
     "node": "0.10.x"
