--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "hubot-google-images": "^0.1.4",
     "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
-    "hubot-karma": "^0.2.2",
+    "hubot-karma-classic": "^1.0.2",
     "hubot-maps": "0.0.2",
     "hubot-mongodb-brain": "^0.1.0",
     "hubot-pugme": "^0.1.0",
     "hubot-rules": "^0.1.0",
     "hubot-schedule": "~0.2.0",
-    "hubot-scripts": "^2.5.16",
+    "hubot-scripts": "^2.16.1",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
     "hubot-youtube": "^0.1.2"
