--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   },
   "engines": {
     "node": "0.10.x"
+  },
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "coffee-script": "^1.9.3",
+    "coffeelint": "^1.10.1",
+    "hubot-mock-adapter": "^1.0.0",
+    "hubot-mock-adapter-helper": "0.0.1",
+    "mocha": "^2.2.5"
   }
 }
