--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "hubot-scripts": "^2.16.1",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
-    "hubot-youtube": "^0.1.2"
+    "hubot-youtube": "^0.1.2",
+    "slack-api-client": "0.0.2"
   },
   "engines": {
     "node": "0.10.x"
