--- a/lintconfig.json
+++ b/lintconfig.json
@@ -100,7 +100,7 @@
     "level": "error"
   },
   "no_trailing_whitespace": {
-    "level": "error",
+    "level": "ignore",
     "allowed_in_comments": false,
     "allowed_in_empty_lines": true
   },
