--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "author": "Arata Tanaka <tarata43@yahoo.co.jp>",
   "scripts": {
-      "test": "make test"
+    "test": "make test"
   },
   "description": "Dark",
   "dependencies": {
+    "eastasianwidth": "^0.1.0",
     "hubot": "^2.12.0",
     "hubot-google-images": "^0.1.4",
     "hubot-google-translate": "^0.1.0",
