--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "author": "Arata Tanaka <tarata43@yahoo.co.jp>",
   "scripts": {
-    "test": "make test"
+    "test": "make install && make test"
   },
   "description": "Dark",
   "dependencies": {
