--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "chai": "^3.2.0",
     "coffee-script": "^1.9.3",
     "coffeelint": "^1.10.1",
+    "gulp": "^3.9.0",
+    "gulp-exec": "^2.1.2",
+    "gulp-mocha": "^2.1.3",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5",
     "hubot-mock-adapter": "^1.0.0",
     "hubot-mock-adapter-helper": "0.0.1",
     "mocha": "^2.2.5"
