--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
     "hubot-youtube": "^0.1.2",
+    "punycode": "^1.3.2",
     "slack-api-client": "0.0.2"
   },
   "engines": {
