--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "hubot-slack": "^3.3.0",
     "hubot-youtube": "^0.1.2",
     "punycode": "^1.3.2",
-    "slack-api-client": "0.0.2"
+    "slack-api-client": "0.0.2",
+    "slackbotapi": "^1.3.7"
   },
   "engines": {
     "node": "0.10.x"
