--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
   "dependencies": {
     "eastasianwidth": "^0.1.0",
     "hubot": "^2.12.0",
-    "hubot-google-images": "^0.2.5",
-    "hubot-google-translate": "^0.2.0",
+    "hubot-google-images": "^0.1.4",
+    "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
     "hubot-maps": "0.0.2",
     "hubot-pugme": "^0.1.0",
     "hubot-rules": "^0.1.0",
-    "hubot-schedule": "^0.4.0",
+    "hubot-schedule": "~0.2.0",
     "hubot-scripts": "^2.16.1",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
-    "hubot-youtube": "^1.0.1",
+    "hubot-youtube": "^0.1.2",
     "punycode": "^1.3.2",
-    "slack-api-client": "^0.0.5",
+    "slack-api-client": "0.0.2",
     "slackbotapi": "^1.3.7"
   },
   "engines": {
