--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "babel": "^6.3.26",
     "babel-cli": "^6.3.17",
+    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.2.0",
     "coffee-script": "^1.9.3",
     "coffeelint": "^1.10.1",
