--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "hubot-youtube": "^1.0.1",
     "punycode": "^1.3.2",
     "slack-api-client": "^0.0.5",
-    "slackbotapi": "^1.3.7"
+    "slackbotapi": "^1.3.7",
+    "hubot-moji": "https://github.com/ara-ta3/hubot-moji.git"
   },
   "engines": {
     "node": "5.1.x"
