--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hubot-help": "^0.1.1",
     "hubot-lgtm": "https://github.com/bouzuya/hubot-lgtm/archive/master.tar.gz",
     "hubot-maps": "0.0.2",
+    "hubot-moji": "^1.0.0",
     "hubot-nullpo": "0.0.5",
     "hubot-pugme": "^0.1.0",
     "hubot-rules": "^0.1.0",
@@ -25,8 +26,7 @@
     "hubot-youtube": "^1.0.1",
     "punycode": "^1.3.2",
     "slack-api-client": "^0.0.5",
-    "slackbotapi": "^1.3.7",
-    "hubot-moji": "https://github.com/ara-ta3/hubot-moji.git"
+    "slackbotapi": "^1.3.7"
   },
   "engines": {
     "node": "5.1.x"
