--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "eastasianwidth": "^0.1.0",
     "hubot": "^2.12.0",
+    "hubot-attend-management": "0.0.1",
     "hubot-google-images": "^0.2.5",
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.1.1",
