--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hubot-scripts": "^2.16.1",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
+    "hubot-slack-timeline": "^0.2.2",
     "hubot-youtube": "^1.0.1",
     "punycode": "^1.3.2",
     "slack-api-client": "^0.0.5",
