--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
     "hubot-youtube": "^1.0.1",
+    "node-uuid": "^1.4.7",
     "punycode": "^1.3.2",
     "slack-api-client": "^0.0.5",
     "slackbotapi": "^1.3.7"
