--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "description": "Dark",
   "dependencies": {
     "eastasianwidth": "^0.1.0",
+    "hp-manager": "0.0.7",
     "hubot": "^2.12.0",
     "hubot-attend-management": "^0.1.x",
     "hubot-google-images": "^0.2.5",
