--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.1.1",
     "hubot-maps": "0.0.2",
+    "hubot-middleware-kuromoji": "^0.1.4",
     "hubot-moji": "^1.0.0",
     "hubot-nullpo": "0.0.5",
     "hubot-plusplus": "^1.2.3",
@@ -25,6 +26,7 @@
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
     "hubot-youtube": "^1.0.1",
+    "kuromoji": "0.0.5",
     "node-quest": "0.0.2",
     "node-uuid": "^1.4.7",
     "punycode": "^1.3.2",
