--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "description": "Dark",
   "dependencies": {
+    "cron": "^1.1.0",
     "eastasianwidth": "^0.1.0",
     "hubot": "^2.12.0",
     "hubot-attend-management": "^0.1.x",
@@ -31,7 +32,8 @@
     "node-uuid": "^1.4.7",
     "punycode": "^1.3.2",
     "slack-api-client": "^0.0.5",
-    "slackbotapi": "^1.3.7"
+    "slackbotapi": "^1.3.7",
+    "time": "^0.11.4"
   },
   "engines": {
     "node": "5.1.x"
