--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "node-uuid": "^1.4.7",
     "punycode": "^1.3.2",
     "slack-api-client": "^0.0.5",
-    "slackbotapi": "^1.3.7",
-    "time": "^0.11.4"
+    "slackbotapi": "^1.3.7"
   },
   "engines": {
     "node": "5.1.x"
