Add empty test file

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Arata Tanaka <tarata43@yahoo.co.jp>",
   "scripts": {
     "test-coffee": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register --recursive ./test/coffee -R spec",
-    "test-js": "./node_modules/.bin/mocha --compilers js:espower-babel/guess --recursive ./test/js -R spec",
+    "test-js": "./node_modules/.bin/mocha --compilers js:espower-babel/guess,coffee:coffee-script/register --recursive ./test/js -R spec",
     "test": "make install && make test"
   },
   "description": "Dark",
