--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-quest": "0.0.2",
     "node-uuid": "^1.4.7",
     "punycode": "^1.3.2",
+    "request": "^2.69.0",
     "slack-api-client": "^0.0.5",
     "slackbotapi": "^1.3.7"
   },
@@ -53,6 +54,7 @@
     "gulp-watch": "^4.3.5",
     "hubot-mock-adapter": "^1.0.0",
     "hubot-mock-adapter-helper": "0.0.1",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "power-assert": "^1.3.1"
   }
 }
