--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cron": "^1.1.0",
     "eastasianwidth": "^0.1.0",
+    "eventemitter2": "^1.0.0",
     "hubot": "^2.12.0",
     "hubot-attend-management": "^0.1.x",
     "hubot-google-images": "^0.2.5",
@@ -30,7 +31,7 @@
     "hubot-slack": "^3.3.0",
     "hubot-youtube": "^1.0.1",
     "kuromoji": "0.0.5",
-    "node-quest": "0.0.2",
+    "node-quest": "0.0.4",
     "node-uuid": "^1.4.7",
     "punycode": "^1.3.2",
     "request": "^2.69.0",
