--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "punycode": "^1.3.2",
     "request": "^2.69.0",
     "slack-api-client": "^0.0.5",
-    "slackbotapi": "^1.3.7"
+    "slackbotapi": "^1.3.7",
+    "xml2js": "^0.4.16"
   },
   "engines": {
     "node": "5.1.x"
