--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "hubot-slack": "^3.3.0",
     "hubot-youtube": "^1.0.1",
     "kuromoji": "0.0.5",
-    "node-quest": "0.0.4",
+    "node-quest": "^0.3.0",
     "node-uuid": "^1.4.7",
     "punycode": "^1.3.2",
     "request": "^2.69.0",
-    "slack-api-client": "^0.0.5",
+    "slack-api-client": "^0.1.1",
     "slackbotapi": "^1.3.7"
   },
   "engines": {
