--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Arata Tanaka <tarata43@yahoo.co.jp>",
   "scripts": {
     "test": "make test",
-    "test-js": "./node_modules/.bin/mocha --compilers js:espower-babel/guess,coffee:coffee-script/register --recursive ./test/js -R spec",
-    "test-watch-js": "./node_modules/.bin/mocha --compilers js:espower-babel/guess,coffee:coffee-script/register --recursive ./test/js -R spec --watch",
-    "compile":"./node_modules/.bin/babel src",
+    "test-js": "./node_modules/.bin/mocha --compilers js:babel-register,coffee:coffee-script/register --recursive ./test/js -R spec",
+    "test-watch-js": "./node_modules/.bin/mocha --compilers js:babel-register,coffee:coffee-script/register --recursive ./test/js -R spec --watch",
+    "compile": "./node_modules/.bin/babel src",
     "compile-watch": "./node_modules/.bin/babel src --watch --out-file /dev/null"
   },
   "description": "Dark",
@@ -44,11 +44,13 @@
   },
   "devDependencies": {
     "babel-cli": "^6.5.1",
+    "babel-plugin-espower": "^2.1.2",
     "babel-preset-es2015": "^6.5.0",
+    "babel-preset-power-assert": "^1.0.0",
+    "babel-register": "^6.8.0",
     "chai": "^3.2.0",
     "coffee-script": "^1.9.3",
     "coffeelint": "^1.10.1",
-    "espower-babel": "^4.0.1",
     "hubot-mock-adapter": "^1.0.0",
     "hubot-mock-adapter-helper": "0.0.1",
     "mocha": "^2.2.5",
