--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "chai": "^3.2.0",
     "coffee-script": "^1.9.3",
     "coffeelint": "^1.10.1",
-    "hubot-mock-adapter": "^1.0.0",
-    "hubot-mock-adapter-helper": "0.0.1",
+    "hubot-test-helper": "^1.4.4",
     "mocha": "^2.2.5",
     "power-assert": "^1.3.1"
   }
