Remove hubot scripts

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "hubot-nullpo": "0.0.5",
     "hubot-plusplus": "^1.2.5",
     "hubot-pugme": "^0.1.0",
+    "hubot-redis-brain": "0.0.3",
     "hubot-rules": "^0.1.1",
-    "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
     "hubot-youtube": "^1.0.2",
