--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "punycode": "^2.0.0",
     "request": "^2.72.0",
     "slack-api-client": "^0.1.1",
-    "slackbotapi": "^1.3.7"
+    "slackbotapi": "^1.3.7",
+    "sqlite3": "^3.1.4"
   },
   "engines": {
     "node": "5.1.x"
