--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "Arata Tanaka <tarata43@yahoo.co.jp>",
   "scripts": {
     "test": "make test",
-    "test-js": "./node_modules/.bin/mocha --compilers js:babel-register,coffee:coffee-script/register --recursive ./test/js -R spec",
-    "test-watch-js": "./node_modules/.bin/mocha --compilers js:babel-register,coffee:coffee-script/register --recursive ./test/js -R spec --watch",
-    "compile": "./node_modules/.bin/babel src",
-    "compile-watch": "./node_modules/.bin/babel src --watch --out-file /dev/null"
+    "test-js": "mocha --compilers js:babel-register,coffee:coffee-script/register --recursive ./test/js -R spec",
+    "test-watch-js": "mocha --compilers js:babel-register,coffee:coffee-script/register --recursive ./test/js -R spec --watch",
+    "compile": "babel src",
+    "compile-watch": "babel src --watch --out-file /dev/null",
+    "migrate/up": "db-migrate --migrations-dir ./migrations up",
+    "migrate/down": "db-migrate --migrations-dir ./migrations down"
   },
   "description": "Dark",
   "dependencies": {
@@ -51,6 +53,8 @@
     "babel-preset-power-assert": "^1.0.0",
     "babel-register": "^6.8.0",
     "coffee-script": "^1.10.0",
+    "db-migrate": "^0.10.0-beta.16",
+    "db-migrate-sqlite3": "^0.1.9",
     "hubot-test-helper": "^1.4.4",
     "mocha": "^3.0.2",
     "power-assert": "^1.3.1"
