--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "hubot-youtube": "^1.0.2",
     "kuromoji": "0.1.1",
     "levenshtein": "^1.0.5",
+    "newrelic": "^1.34.0",
     "node-quest": "^0.9.0",
     "node-uuid": "^1.4.7",
     "punycode": "^2.0.0",
