--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "slack-api-client": "^0.1.1",
     "slackbotapi": "^1.3.7",
     "sqlite3": "^3.1.4",
+    "string-template": "^1.0.0",
     "uuid": "^3.1.0"
   },
   "engines": {
