--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hubot-rules": "^0.1.1",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.0.2 < 4.0.0",
+    "hubot-vg-8th-floors": "^1.0.3",
     "hubot-youtube": "^1.0.2",
     "kuromoji": "0.1.1",
     "levenshtein": "^1.0.5",
