--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "hubot-fujiwara": "^1.0.0",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
-    "hubot-help": "^0.2.0",
+    "hubot-help": "^1.0.1",
     "hubot-maps": "0.0.2",
     "hubot-middleware-kuromoji": "^0.2.1",
     "hubot-moji": "^1.0.5",
@@ -47,11 +47,9 @@
     "uuid": "^3.1.0"
   },
   "engines": {
-    "node": "5.1.x"
+    "node": "v6.11.x"
   },
   "devDependencies": {
-    "coffee-script": "^1.10.0",
-    "hubot-test-helper": "^1.4.4",
     "mocha": "^3.0.2",
     "npm-run-all": "^4.1.2",
     "power-assert": "^1.3.1"
