--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "author": "Arata Tanaka <tarata43@yahoo.co.jp>",
   "scripts": {
-    "test": "npm-run-all mocha hubot-config-check",
     "hubot-config-check": "hubot --config-check",
-    "mocha": "mocha --recursive ./test/js -R spec",
-    "mocha:watch": "mocha --recursive ./test/js -R spec --watch",
+    "mocha": "mocha --recursive ./test/js --exit",
+    "mocha:watch": "mocha --recursive ./test/js --watch --exit",
     "start": "hubot"
   },
   "description": "Dark",
@@ -50,8 +49,7 @@
     "node": "v6.11.x"
   },
   "devDependencies": {
-    "mocha": "^3.0.2",
-    "npm-run-all": "^4.1.2",
-    "power-assert": "^1.3.1"
+    "mocha": "5.2.0",
+    "power-assert": "1.5.0"
   }
 }
