--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "slack-api-client": "^0.1.1",
     "slackbotapi": "^1.3.7",
     "string-template": "^1.0.0",
-    "uuid": "^3.1.0"
+    "uuid": "3.2.1"
   },
   "engines": {
     "node": "v6.11.x"
