--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eventemitter2": "^2.0.0",
     "hubot": "2.19.0",
     "hubot-character": "^0.2.0",
-    "hubot-fujiwara": "^1.0.0",
+    "hubot-fujiwara": "1.1.0",
     "hubot-google-images": "^0.2.6",
     "hubot-help": "^1.0.1",
     "hubot-middleware-kuromoji": "^0.2.1",
