--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^12.0.8",
     "mocha": "5.2.0",
     "power-assert": "1.5.0",
+    "prettier": "^1.18.2",
     "typescript": "^3.5.2"
   }
 }
