no use strict in ts compiled for documents logger

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "removeComments": false,
         "preserveConstEnums": true,
         "sourceMap": false,
+        "alwaysStrict": false,
         "lib": [ "es2015" ]
     },
     "include": [
