--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/hubot": "^2.19.5",
     "@types/node": "^12.0.8",
+    "@types/uuid": "^3.4.4",
     "mocha": "5.2.0",
     "power-assert": "1.5.0",
     "prettier": "^1.18.2",
