--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "lib": [ "es2015" ]
     },
     "include": [
-        "src/scripts/*"
+        "src/**/*.ts"
     ],
     "exclude": [
         "node_modules"
