--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "node": ">= 6.11.1"
   },
   "devDependencies": {
+    "@types/hubot": "^2.19.5",
+    "@types/node": "^12.6.2",
     "mocha": "5.2.0",
-    "power-assert": "1.5.0"
+    "power-assert": "1.5.0",
+    "prettier": "^1.18.2",
+    "typescript": "^3.5.3"
   }
 }
