--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "hubot-nullpo": "0.0.7",
     "hubot-plusplus": "^1.2.5",
     "hubot-redis-brain": "0.0.3",
-    "hubot-slack": "^3.0.2 < 4.0.0",
+    "hubot-slack": "4.7.1",
     "hubot-vg-8th-floors": "1.0.4",
     "hubot-youtube": "^1.0.2",
     "kuromoji": "0.1.1",
     "levenshtein": "^1.0.5",
+    "node-cache": "^4.2.0",
     "node-quest": "^0.9.0",
     "punycode": "^2.0.0",
     "raven": "^2.6.2",
