--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "config": "^1.21.0",
     "cron": "^1.1.0",
-    "eastasianwidth": "^0.1.1",
+    "eastasianwidth": "0.2.0",
     "eventemitter2": "^2.0.0",
     "hubot": "3.3.2",
     "hubot-character": "^0.3.0",
