--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "description": "Dark",
   "dependencies": {
-    "config": "^1.21.0",
+    "config": "3.2.0",
     "cron": "^1.1.0",
     "eastasianwidth": "0.2.0",
     "eventemitter2": "^2.0.0",
