--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "config": "3.2.0",
     "cron": "^1.1.0",
     "eastasianwidth": "0.2.0",
-    "eventemitter2": "^2.0.0",
+    "eventemitter2": "5.0.1",
     "hubot": "3.3.2",
     "hubot-character": "^0.3.0",
     "hubot-fujiwara": "1.1.0",
